--- a/Instagram Clone/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Instagram Clone/Views/Storyboards/Base.lproj/Main.storyboard
@@ -55,14 +55,51 @@
                     <view key="view" contentMode="scaleToFill" id="jPC-9Q-L2Y">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tEe-Gk-i6G">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ig_logo" translatesAutoresizingMaskIntoConstraints="NO" id="mDA-oL-iTQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="190" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="LWt-ej-Isq"/>
+                                            <constraint firstAttribute="width" constant="190" id="evZ-CJ-PgR"/>
+                                        </constraints>
+                                    </imageView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nSL-Bm-nPF">
+                                        <rect key="frame" x="0.0" y="50" width="414" height="719"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="nSL-Bm-nPF" secondAttribute="trailing" id="CVE-Gl-XED"/>
+                                    <constraint firstItem="mDA-oL-iTQ" firstAttribute="leading" secondItem="tEe-Gk-i6G" secondAttribute="leading" id="DOP-36-YPc"/>
+                                    <constraint firstItem="mDA-oL-iTQ" firstAttribute="top" secondItem="tEe-Gk-i6G" secondAttribute="top" id="IBc-Py-QSm"/>
+                                    <constraint firstAttribute="bottom" secondItem="nSL-Bm-nPF" secondAttribute="bottom" id="OgP-cl-z6s"/>
+                                    <constraint firstItem="nSL-Bm-nPF" firstAttribute="leading" secondItem="tEe-Gk-i6G" secondAttribute="leading" id="dSO-w3-7cD"/>
+                                    <constraint firstItem="nSL-Bm-nPF" firstAttribute="top" secondItem="mDA-oL-iTQ" secondAttribute="bottom" id="egj-qw-U4M"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="jTW-0T-xWt"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jTW-0T-xWt" firstAttribute="trailing" secondItem="tEe-Gk-i6G" secondAttribute="trailing" id="909-eM-QwQ"/>
+                            <constraint firstItem="jTW-0T-xWt" firstAttribute="bottom" secondItem="tEe-Gk-i6G" secondAttribute="bottom" id="Fve-hk-JDl"/>
+                            <constraint firstItem="tEe-Gk-i6G" firstAttribute="leading" secondItem="jTW-0T-xWt" secondAttribute="leading" id="Jk9-Ln-JgI"/>
+                            <constraint firstItem="jTW-0T-xWt" firstAttribute="top" secondItem="tEe-Gk-i6G" secondAttribute="top" id="RW5-UR-Lwm"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="21B-e2-f9E"/>
+                    <navigationItem key="navigationItem" id="yx3-fr-PI2"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="tableview" destination="nSL-Bm-nPF" id="kOs-I3-ugP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s3M-Ue-vAp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3952" y="526"/>
+            <point key="canvasLocation" x="-3952.1739130434785" y="525.66964285714289"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="DBL-BQ-zaN">
@@ -208,6 +245,7 @@
         <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="house" catalog="system" width="128" height="106"/>
+        <image name="ig_logo" width="2560" height="914"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="plus" catalog="system" width="128" height="113"/>
